# FareHawk

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bot/: main.py
bot/handlers/: __init__.py  check.py  search.py  settings.py  start.py  trips.py
bot/i18n/: __init__.py  en.py  es.py
bot/keyboards/: inline.py
core/: config.py  database.py  models.py  scheduler.py  time.py
providers/: aggregator.py  amadeus.py  base.py  kiwi.py  serpapi.py  skyscanner.py
services/: alerts.py  charts.py  digest.py  price_checker.py
tests/: test_aggregator.py  test_alerts.py  test_charts.py  test_config.py  test_digest.py  test_provider_hardening.py  test_time.py  test_trip_authorization.py  test_trip_keyboards.py
