[project]
name = "farehawk"
version = "0.1.0"
description = "Telegram bot for tracking flight prices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[ext]==20.7",
    "SQLAlchemy>=2.0,<3.0",
    "APScheduler>=3.10,<4.0",
    "aiohttp>=3.9,<4.0",
    "matplotlib>=3.8,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
